<resources>
    <string name="app_name">Reusame</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="fragment_map_title">Map</string>
    <string name="fragment_map_marker_button">I want it!</string>
    <string name="fragment_add_image">Chose a Picture</string>
    <string name="fragment_add_item">Give Away!</string>

    <string name="fragment_list_title">List</string>
    <string name="fragment_login_title">Login</string>

    <string name="fragment_add_object">Add</string>
    <string name="fragment_add_object_title_name">Name:</string>
    <string name="fragment_add_object_title_description">Description:</string>
    <string name="fragment_add_object_title_category">Category:</string>
    <string name="fragment_add_object_category_title">Categories</string>
    <string name="fragment_add_object_category_chose">Choose category</string>
    <string name="fragment_add_object_expires_on_title">Experies on:</string>
    <string name="fragment_add_object_expires_on">When does the item expires?</string>
    <string-array name="fragment_add_object_category">
        <item>Accessories</item>
        <item>Art &amp; Collectibles</item>
        <item>Bags &amp; Purses</item>
        <item>Bath &amp; Beauty</item>
        <item>Books, Movies &amp; Music</item>
        <item>Clothing</item>
        <item>Craft Supplies &amp; Tools</item>
        <item>Electronics &amp; Accessories</item>
        <item>Home &amp; Living</item>
        <item>Jewelry</item>
        <item>Other</item>
        <item>Paper Goods &amp; Party Supplies</item>
        <item>Pet Supplies</item>
        <item>Shoes</item>
        <item>Sports &amp; Accessories</item>
        <item>Toys &amp; Games</item>
    </string-array>
    
    <string name="navigation_drawer_open"></string>
    <string name="navigation_drawer_close"></string>
    <string name="no_connection">Connection error. Please, check your connection and retry.</string>
    <string name="logout">Log Out</string>
    <string name="not_logged_in">Please, login first and retry.</string>
    <string name="login_error">Login failed, please try again later.</string>
    <string name="login_ok">You have successfully logged in.</string>
    <string name="login_email">Confirm your email</string>
    <string name="email_hint">your@email.com</string>
    <string name="invalid_email">Please, enter a valid email and try again.</string>
    <string name="login_email_text">Please, enter your email so that we can put you in touch with the people you deal with.</string>
    <string name="menu_search">Search</string>

    <string name="activity_detail_title">DetailActivity</string>
    <string name="activity_detail_title_user">User:</string>
    <string name="activity_detail_title_date">Added:</string>
    <string name="activity_detail_title_location">Location:</string>
    <string name="activity_detail_title_descripition">Description:</string>
    <string name="activity_detail_title_expire">Expire on:</string>
    <string name="activity_detail_hint_edittext">Hi, I saw your product and I am very interested. When can we meet up?</string>
    <string name="activity_detail_sending">Sending...</string>
    <string name="activity_detail_vote_title">Vote</string>
    <string name="activity_detail_vote">Do you want to vote with %1$s this object?</string>
    <string name="activity_detail_want_success">We have contacted the owner of the item regarding your interest in this item. Hopefully, he will get back to you shortly.</string>
    <string name="add_item_empty_field">Empty field</string>
    <string name="add_item_no_category">Please, select a category</string>
    <string name="add_item_no_date">Please, select a date</string>
    <string name="add_item_no_image">Please, select an existing image or take a picture of the item</string>
    <string name="add_item_error_image">An error occurred, please try again and/or select another picture.</string>
    <string name="add_item_img_source">Select Source</string>
    <string name="add_item_succesful">Your item was added with succesful.&#xA; Thank very much for this contribution.</string>
    <string name="add_item_succesful_title">From Lumbrales Software</string>
    <string name="add_item_error">There were problems to add, &#xA;try again, please.</string>
    <string name="add_item_loading">Loading&#8230;</string>

    <string name="action_our_apps">Our Apps</string>
    <string name="action_about_us">About us</string>

    <string name="dialog_custom_year">Year:</string>
    <string name="dialog_custom_month">Month:</string>
    <string name="dialog_custom_day">Day:</string>

    <string name="conditions">I only ask you to give something away in this website and the item is yours.</string>
    <string name="title_conditions">Conditions:</string>

    <string name="app_rate">App Rate</string>
    <string name="app_rate_rate">Rate Resusame</string>
    <string name="app_rate_enjoying">If you enjoy usuing Reusame, pelase take a minute to rate it.&#xA; Thanks for your support!</string>
    <string name="app_rate_no_rate">No thanks</string>

</resources>
