<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme.Relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/fragment_add_object_linear_layout_title"
                style="@style/AppTheme.Relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white"
                android:orientation="vertical">

                <com.lumbralessoftware.freeall.views.CustomTextView
                    android:id="@+id/fragment_add_object_name"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/fragment_add_object_title_name" />

                <EditText
                    android:id="@+id/fragment_add_object_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_add_object_linear_layout_description"
                style="@style/AppTheme.Relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_add_object_linear_layout_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_detail_margeTop"
                android:background="@android:color/white"
                android:orientation="vertical">

                <com.lumbralessoftware.freeall.views.CustomTextView
                    android:id="@+id/fragment_add_object_description"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/fragment_add_object_title_description" />

                <EditText
                    android:id="@+id/fragment_add_object_description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_add_object_linear_layout_category"
                style="@style/AppTheme.Relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_add_object_linear_layout_description"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_detail_margeTop"
                android:background="@android:color/white"
                android:orientation="vertical">

                <com.lumbralessoftware.freeall.views.CustomTextView
                    android:id="@+id/fragment_add_object_category_title"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/fragment_add_object_title_category" />

            </LinearLayout>
                <Button
                    android:id="@+id/fragment_add_object_add_item_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_add_object_linear_layout_category"
                    android:background="@android:color/black"
                    android:text="@string/fragment_add_object_category_chose"
                    android:textColor="@android:color/white" />

            <LinearLayout
                android:id="@+id/fragment_add_object_linear_layout_image"
                style="@style/AppTheme.Relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_add_object_add_item_category"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_detail_margeTop"
                android:background="@android:color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/fragment_add_object_add_photo_imgView"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:background="@drawable/no_image"
                    android:scaleType="centerCrop" />

            </LinearLayout>

            <Button
                android:id="@+id/fragment_add_object_add_item_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_add_object_linear_layout_image"
                android:layout_marginTop="@dimen/activity_detail_margeTop"
                android:background="@android:color/black"
                android:text="@string/fragment_add_item"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>